# Browser

./: .gitignore
resources/: config.ini
src/: CMakeLists.txt  common_data.h  main.cpp
src/database_manager/: CMakeLists.txt  database_manager.cpp  database_manager.h  querys.h
src/searcher/: CMakeLists.txt  html_tamplates.h  http_server.cpp  http_server.h  main.cpp
src/spider/: CMakeLists.txt  spider.cpp  spider.h
src/spider/database_manager/: database_manager.h
src/spider/indexer/: CMakeLists.txt  indexer.cpp  indexer.h
src/spider/page_loader/: CMakeLists.txt  page_loader.cpp  page_loader.h
src/spider/parser/: CMakeLists.txt  parser.cpp  parser.h
src/utils/: CMakeLists.txt  secondary_function.cpp  secondary_function.h
